@@ -43,7 +43,7 @@ public:
 	virtual char *readLine();
 
 	/// Write some data to the virtual port
-	virtual void writeData(const char *data);
+	virtual void writeData(const char *data, int log=1);
 
 private:
 	/// The file descriptor
